tests/wsf/fail/slide_positive.wsf
+0slide
+1slide
+2slide
+3slide
+4slide
+5slide
end
